--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,8 @@
+@import './variables';
+@import './mixins';
+
+@import "./login";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
