Created navbar, skeleton dashboard layout, post function that posts to db

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -2,6 +2,10 @@
 @import './mixins';
 
 @import "./login";
+@import "./navBar";
+@import "./createPost";
+@import "./sideBar";
+@import "./dashboard";
 
 body {
   margin: 0;
