--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,8 @@ $secondary-text-color: rgb(60, 126, 250);
 $third-text-color: rgb(78, 78, 78);
 $fourth-text-color: rgb(255, 80, 80);
 
+$border-color: rgb(241, 241, 241);
+
 //dark theme colors
 $bg-color-dark: rgb(27, 27, 27);
 $secondary-bg-color-dark: rgb(43, 43, 43);
