Added users posts and like/dislike functions

--- a/src/styles/_createPost.scss
+++ b/src/styles/_createPost.scss
@@ -4,10 +4,11 @@
 .create-post {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
     
     .create-post-container {
         @include flexCenter(column);
-        width: 400px;
+        width: 600px;
         padding: 20px;
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px;
@@ -25,9 +26,9 @@
             }
 
             .input {
-                width: 300px;
+                width: 500px;
                 resize: none;
-                
+                min-height: 50px;
             }
         }
 
@@ -41,7 +42,7 @@
             }
         }
 
-        .error-ms {
+        .error-msg {
             color: red;
         }
 }
