--- a/src/styles/_sideBar.scss
+++ b/src/styles/_sideBar.scss
@@ -13,6 +13,7 @@
     .user {
         @include flexCenter(row);
         justify-content: flex-start;
+        gap: 15px;
         svg {
             height: 35px;
         }
