Displays posts from friends and own posts, added a friend list to the side bar

--- a/src/styles/_sideBar.scss
+++ b/src/styles/_sideBar.scss
@@ -18,4 +18,17 @@
             height: 35px;
         }
     }
+
+    .friend-list {
+        h2 {
+            font-size: 1.2em;
+            font-weight: 600;
+            opacity: .7;
+        }
+
+        h3 {
+            margin-bottom: 0px;
+            opacity: .6;
+        }
+    }
 }
