--- a/src/styles/_navBar.scss
+++ b/src/styles/_navBar.scss
@@ -12,6 +12,36 @@
     top: 0px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
+    .search-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        svg {
+            height: 30px;
+            position: relative;
+            left: 40px;
+        }
+
+        input {
+            padding: 10px;
+            padding-left: 40px;
+            border: none;
+            background-color: $fifth-bg-color;
+            border-radius: 16px;
+        }
+
+        input:focus {
+            outline-color: $secondary-text-color;
+        }
+
+        .search-field {
+            position: absolute;
+            top: 60px;
+            padding-left: 32px
+        }
+    }
+
     .route-container {
         @include flexCenter(row);
         gap: 2vw;
