--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $bg-color: rgb(226, 226, 226);
 $secondary-bg-color: rgb(248, 248, 248);
 $third-bg-color: rgb(63, 63, 63);
 $fourth-bg-color: white;
+$fifth-bg-color: rgb(238, 238, 238);
 
 $btn-color: rgba(73, 127, 226, 0.815);
 $secondary-btn-color: rgba(51, 201, 108, 0.815);
