--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -12,6 +12,7 @@
 @import "./notifsBox";
 @import "./profilePop";
 @import "./commentCard";
+@import "./userCard";
 
 body {
   margin: 0;
@@ -20,6 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $secondary-bg-color;
 }
 
 code {
