--- a/src/styles/_userCard.scss
+++ b/src/styles/_userCard.scss
@@ -7,6 +7,7 @@
     background-color: $fourth-bg-color;
     padding: 15px 25px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 3px 1px;
+    border-radius: 8px;
 
     .pop-grid {
         display: flex;
