--- a/src/styles/_userPage.scss
+++ b/src/styles/_userPage.scss
@@ -31,6 +31,10 @@
                 padding: 0;
                 
                 .profile-pic {
+                    img {
+                        width: 200px;
+                        border-radius: 50%;
+                    }
                     svg {
                         height: 200px;
                         border-radius: 50%;
@@ -65,6 +69,7 @@
                         border-radius: 50%;
                         height: 25px;
                         background-color: white;
+                        cursor: pointer;
                         
                     }
                 }
