--- a/src/styles/_notifsBox.scss
+++ b/src/styles/_notifsBox.scss
@@ -18,6 +18,11 @@
             padding: 10px 10px;
             padding-left: 5px;
 
+            img, svg {
+                height: 30px;
+                border-radius: 50%;
+            }
+
             .btn-container {
                 display: flex;
                 gap: 10px;
