--- a/src/styles/_searchBox.scss
+++ b/src/styles/_searchBox.scss
@@ -11,6 +11,14 @@
         margin: 0px 0px;
         padding: 0px;
         li {
+            img, svg {
+                position: static !important;
+                height: 35px;
+                border-radius: 50%;
+            }
+            display: flex;
+            align-items: center;
+            gap: 10px;
             list-style: none;
             padding: 10px 0px;
             padding-left: 5px;
