--- a/src/styles/_userPage.scss
+++ b/src/styles/_userPage.scss
@@ -5,6 +5,11 @@
     // margin: 0px 20em;
 }
 
+.center-loading {
+    margin-top: 200px;
+    @include flexCenter(row);
+}
+
 .user-page {
     display: flex;
     padding: 0px 20em;
@@ -29,6 +34,7 @@
             
             .profile-pic-container {
                 padding: 0;
+                margin-right: 20px;
                 
                 .profile-pic {
                     img, svg {
@@ -56,6 +62,14 @@
             }
 
             .name-friends-container {
+
+                .have-friends {
+                    display: flex;
+                    gap: 5px;
+                    h3 {
+                        white-space: nowrap;
+                    }
+                }
 
                 .friend-pics {
                     display: flex;
@@ -95,6 +109,8 @@
                 justify-content: center;
                 align-items: center;
                 cursor: pointer;
+                gap: 5px;
+                white-space: nowrap;
             }
         }
     }
