Skeleton user page body with friends, about section and users posts. Fixed a bug for popup on the user page header. Added routes to respective users for profile pictures

--- a/src/styles/_sideBar.scss
+++ b/src/styles/_sideBar.scss
@@ -35,6 +35,12 @@
             opacity: .6;
         }
 
+        .friend-pop {
+            position: absolute;
+
+            
+        }
+
         .friend {
             @include flexCenter(row);
             justify-content: flex-start;
