--- a/src/styles/_userCard.scss
+++ b/src/styles/_userCard.scss
@@ -8,6 +8,7 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 3px 1px;
     border-radius: 8px;
     width: 250px;
+    margin-top: -5px;
 
     .pop-grid {
         display: flex;
