Added button mixins, button to load more posts/comments, and some more styling

--- a/src/styles/_createPost.scss
+++ b/src/styles/_createPost.scss
@@ -37,9 +37,9 @@
             width: 87%;
             justify-content: flex-end;
 
-            button {
-
-            }
+            
+                @include buttonFirst($btn-color)
+            
         }
 
         .error-msg {
