--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $fifth-bg-color: rgb(238, 238, 238);
 
 $btn-color: rgba(73, 127, 226, 0.815);
 $secondary-btn-color: rgba(51, 201, 108, 0.815);
+$third-btn-color: rgb(255, 133, 133);
 
 $main-text-color: rgb(31, 31, 31);
 $secondary-text-color: rgb(60, 126, 250);
