--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -12,4 +12,21 @@
         gap: 150px;
 
     }
+
+    .post-footer {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        .post-link {
+            cursor: pointer;
+            font-size: 12px;
+            text-decoration: underline;
+        }
+
+        .post-link:hover {
+            color: $secondary-text-color;
+        }
+    }
+
+
 }
