--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,3 +4,57 @@
     align-items: center;
     flex-direction: $direction;
 }
+
+@mixin buttonFirst($color) {
+    button{
+        cursor: pointer;
+        padding: 12.5px 30px;
+        border: 0;
+        border-radius: 10px;
+        background-color: $color;
+        color: #ffffff;
+        font-weight: Bold;
+        transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+    }
+      
+      
+      button:hover {            
+        filter: brightness(1.1);
+        box-shadow: 0 0 20px #6fc5ff50;
+      }
+      
+      button:active {
+        filter: brightness(1.1);
+        transition: all 0.25s;
+        -webkit-transition: all 0.25s;
+        box-shadow: none;
+      }
+}
+
+@mixin buttonSecond($color) {
+  button{
+      cursor: pointer;
+      padding: 5px 10px;
+      border: 0;
+      border-radius: 10px;
+      background-color: $color;
+      color: #ffffff;
+      font-weight: Bold;
+      transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+  }
+    
+    
+    button:hover {            
+      filter: brightness(1.1);
+      box-shadow: 0 0 20px #6fc5ff50;
+    }
+    
+    button:active {
+      filter: brightness(1.1);
+      transition: all 0.25s;
+      -webkit-transition: all 0.25s;
+      box-shadow: none;
+    }
+}
