Fixed popup to edit user info. Fixed such that posts and comments are auto reloaded to the page when posted

--- a/src/styles/_createPost.scss
+++ b/src/styles/_createPost.scss
@@ -20,9 +20,10 @@
         .post-form {
             display: flex;
 
-            svg {
-                height: 30px;
+            svg, img {
+                height: 40px;
                 margin-right: 10px;
+                border-radius: 50%;
             }
 
             .input {
